web-hosting-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techstore-prod
  labels:
    env: production
