web-hosting-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techstore-svc
  namespace: techstore-prod
spec:
  type: ClusterIP
  selector:
    app: techstore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
